src/test/resources/regressions/features/sequences/seq-literal-fail5.gobra
package pkg

func foo() {
  // error: negative keys
  //:: ExpectedOutput(type_error)
  ghost s := seq[int] { -10:42 }
}
